deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: backend
  labels:
    app: backend
spec: 
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template: 
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: backend:b
          name: backend
          ports:
            - containerPort: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
 name: profit-prophet
 labels:
  app: profit-prophet
spec:
  selector:
    matchLabels:
      app: profit-prophet
  replicas: 1
  template:
    metadata:
      labels:
        app: profit-prophet
    spec:
      containers:
        - image: backend:b
          imagePullPolicy: Never
          name: backend
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: profit-prophet
spec:  
  type: LoadBalancer
  selector:
    app: profit-prophet
  ports:
    - port: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profit-prophet-ingress
spec:
 rules:
  - http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: profit-prophet
              port:
                number: 3000
